Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2010
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.5.86
DATE 10/10/2010
37th Alpha Release

NEWS:

NEW: [features/enhancements]

BUG FIXES:
+Fix issue where using pane navigator would result in all event handlers being
disconnected until main window recieved an deactivation followed by another
activation event.
+Fix bug in reporting file errors under certain use cases.

#-----------------------------------------------------------------------------#

VERSION 0.5.86
DATE 10/10/2010
37th Alpha Release

NEWS:
This release includes some important Unicode and file loading issues as well
as some new features. See the included change summary below for more details
on what has changed for this release.

NEW: [features/enhancements]
+Add Search in Current Directory option to Find/Replace Dialog
+Increase persistence limit for search in directory history
+Add support for DSP56K assembly
+Add support for OOC programming language
+Support multiple views of the same file within the same window.
+Add support for NONMEM Control Stream files (patch from Robert McLeay)
+Updated CodeBrowser plugin 1.2 (sort view by line number or alphabetically)
+Edge guide color can be configured through Style Editor Dialog.

BUG FIXES:
+Fix major error in handling events when more than one window has been opened.
+Fix bug in style sheet parsing that was not properly setting undefined style
tags to the default_style.
+Fix encoding detection issue that could lead to unhanded exception error.
+Fix handling of Unicode text by Django lexer.
+Fix issues with detecting UTF-16 encoded files that don't have a BOM.
+Fix not being able to run executables in Launch that have spaces in their
paths on Windows.
+Fix issues with aborting processes with Launch plugin on Windows.
+Fix crash that could occur if text was dragged over PluginMgr ListBox.